Zmiana kontrolerów, nowe serwisy

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "SecretKey": "S3cr3tK3y_!@34fd12adfa23fvfw35wfrg45nwf453r",
+    "Issuer": "http://agrochem.com",
+    "JwtExpireDays": 30
+  },
   "ConnectionStrings": {
     "AGROCHEMConn": "Server=LAPTOP-J13RO66F\\SQLEXPRESS;Database=AGROCHEM;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
