--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,15 @@
   "ConnectionStrings": {
     "AGROCHEMConn": "Server=LAPTOP-J13RO66F\\SQLEXPRESS;Database=AGROCHEM;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "Username": "agrochemagrochem20@gmail.com",
+    "Password": "ockjdeaoajqmkpxd"
+  },
+
   "AllowedHosts": "*",
   "profiles": {
     "AGROCHEM": {
