--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
     "JwtExpireDays": 30
   },
   "ConnectionStrings": {
-    "AGROCHEMConn": "Server=tcp:sql-server-agro.database.windows.net,1433;Initial Catalog=Agrochem2;Persist Security Info=False;User ID=agrochem;Password=Agro_pass;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AGROCHEMConn": "Server=LAPTOP-J13RO66F\\SQLEXPRESS;Database=AGROCHEM;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
 
   "SmtpSettings": {
